src/main/java/pdxfile/ParadoxFileParser.java
package pdxfile; // Generated from ParadoxFile.g4 by ANTLR 4.13.1

import java.util.List;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
class ParadoxFileParser extends Parser {
  static {
    RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION);
  }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
  public static final int OPERATOR = 1,
      BLOCK_START = 2,
      BLOCK_END = 3,
      VARIABLE_START = 4,
      VARIABLE_EXPRESSION_START = 5,
      VARIABLE_EXPRESSION_END = 6,
      ABS_VALUE = 7,
      OPEN_PARENS = 8,
      CLOSE_PARENS = 9,
      LIST_START = 10,
      INT = 11,
      PCT = 12,
      REAL = 13,
      DATE = 14,
      SSTRING = 15,
      DSTRING = 16,
      CSTRING = 17,
      SYMBOL = 18,
      PLUS_MINUS = 19,
      MULTIPLY_DIVIDE = 20,
      COMMA = 21,
      WHITESPACE = 22,
      LINE_COMMENT = 23;
  public static final int RULE_config = 0,
      RULE_assignment = 1,
      RULE_lazy_assignment = 2,
      RULE_field = 3,
      RULE_value = 4,
      RULE_symbol = 5,
      RULE_string = 6,
      RULE_integer = 7,
      RULE_real = 8,
      RULE_date = 9,
      RULE_percent = 10,
      RULE_map = 11,
      RULE_array = 12,
      RULE_variable = 13,
      RULE_variable_expression = 14,
      RULE_expression = 15,
      RULE_list = 16,
      RULE_constructor = 17;

  private static String[] makeRuleNames() {
    return new String[] {
      "config",
      "assignment",
      "lazy_assignment",
      "field",
      "value",
      "symbol",
      "string",
      "integer",
      "real",
      "date",
      "percent",
      "map",
      "array",
      "variable",
      "variable_expression",
      "expression",
      "list",
      "constructor"
    };
  }

  public static final String[] ruleNames = makeRuleNames();

  private static String[] makeLiteralNames() {
    return new String[] {
      null, null, "'{'", "'}'", null, "'['", "']'", "'|'", "'('", "')'", "'list'", null, null, null,
      null, null, null, null, null, null, null, "','"
    };
  }

  private static final String[] _LITERAL_NAMES = makeLiteralNames();

  private static String[] makeSymbolicNames() {
    return new String[] {
      null,
      "OPERATOR",
      "BLOCK_START",
      "BLOCK_END",
      "VARIABLE_START",
      "VARIABLE_EXPRESSION_START",
      "VARIABLE_EXPRESSION_END",
      "ABS_VALUE",
      "OPEN_PARENS",
      "CLOSE_PARENS",
      "LIST_START",
      "INT",
      "PCT",
      "REAL",
      "DATE",
      "SSTRING",
      "DSTRING",
      "CSTRING",
      "SYMBOL",
      "PLUS_MINUS",
      "MULTIPLY_DIVIDE",
      "COMMA",
      "WHITESPACE",
      "LINE_COMMENT"
    };
  }

  private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated public static final String[] tokenNames;

  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override
  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() {
    return "ParadoxFile.g4";
  }

  @Override
  public String[] getRuleNames() {
    return ruleNames;
  }

  @Override
  public String getSerializedATN() {
    return _serializedATN;
  }

  @Override
  public ATN getATN() {
    return _ATN;
  }

  public ParadoxFileParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  @SuppressWarnings("CheckReturnValue")
  public static class ConfigContext extends ParserRuleContext {
    public List<Lazy_assignmentContext> lazy_assignment() {
      return getRuleContexts(Lazy_assignmentContext.class);
    }

    public Lazy_assignmentContext lazy_assignment(int i) {
      return getRuleContext(Lazy_assignmentContext.class, i);
    }

    public ConfigContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_config;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).enterConfig(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).exitConfig(this);
    }
  }

  public final ConfigContext config() throws RecognitionException {
    ConfigContext _localctx = new ConfigContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_config);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(39);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 502800L) != 0)) {
          {
            {
              setState(36);
              lazy_assignment();
            }
          }
          setState(41);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class AssignmentContext extends ParserRuleContext {
    public FieldContext field() {
      return getRuleContext(FieldContext.class, 0);
    }

    public TerminalNode OPERATOR() {
      return getToken(ParadoxFileParser.OPERATOR, 0);
    }

    public ValueContext value() {
      return getRuleContext(ValueContext.class, 0);
    }

    public AssignmentContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_assignment;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).enterAssignment(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).exitAssignment(this);
    }
  }

  public final AssignmentContext assignment() throws RecognitionException {
    AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_assignment);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(42);
        field();
        setState(43);
        match(OPERATOR);
        setState(44);
        value();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class Lazy_assignmentContext extends ParserRuleContext {
    public AssignmentContext assignment() {
      return getRuleContext(AssignmentContext.class, 0);
    }

    public FieldContext field() {
      return getRuleContext(FieldContext.class, 0);
    }

    public ValueContext value() {
      return getRuleContext(ValueContext.class, 0);
    }

    public Lazy_assignmentContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_lazy_assignment;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).enterLazy_assignment(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).exitLazy_assignment(this);
    }
  }

  public final Lazy_assignmentContext lazy_assignment() throws RecognitionException {
    Lazy_assignmentContext _localctx = new Lazy_assignmentContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_lazy_assignment);
    try {
      setState(50);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
        case 1:
          enterOuterAlt(_localctx, 1);
          {
            setState(46);
            assignment();
          }
          break;
        case 2:
          enterOuterAlt(_localctx, 2);
          {
            setState(47);
            field();
            setState(48);
            value();
          }
          break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class FieldContext extends ParserRuleContext {
    public StringContext string() {
      return getRuleContext(StringContext.class, 0);
    }

    public SymbolContext symbol() {
      return getRuleContext(SymbolContext.class, 0);
    }

    public VariableContext variable() {
      return getRuleContext(VariableContext.class, 0);
    }

    public TerminalNode LIST_START() {
      return getToken(ParadoxFileParser.LIST_START, 0);
    }

    public FieldContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_field;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).enterField(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener) ((ParadoxFileListener) listener).exitField(this);
    }
  }

  public final FieldContext field() throws RecognitionException {
    FieldContext _localctx = new FieldContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_field);
    try {
      setState(56);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
        case 1:
          enterOuterAlt(_localctx, 1);
          {
            setState(52);
            string();
          }
          break;
        case 2:
          enterOuterAlt(_localctx, 2);
          {
            setState(53);
            symbol();
          }
          break;
        case 3:
          enterOuterAlt(_localctx, 3);
          {
            setState(54);
            variable();
          }
          break;
        case 4:
          enterOuterAlt(_localctx, 4);
          {
            setState(55);
            match(LIST_START);
          }
          break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class ValueContext extends ParserRuleContext {
    public IntegerContext integer() {
      return getRuleContext(IntegerContext.class, 0);
    }

    public PercentContext percent() {
      return getRuleContext(PercentContext.class, 0);
    }

    public RealContext real() {
      return getRuleContext(RealContext.class, 0);
    }

    public DateContext date() {
      return getRuleContext(DateContext.class, 0);
    }

    public StringContext string() {
      return getRuleContext(StringContext.class, 0);
    }

    public SymbolContext symbol() {
      return getRuleContext(SymbolContext.class, 0);
    }

    public VariableContext variable() {
      return getRuleContext(VariableContext.class, 0);
    }

    public Variable_expressionContext variable_expression() {
      return getRuleContext(Variable_expressionContext.class, 0);
    }

    public MapContext map() {
      return getRuleContext(MapContext.class, 0);
    }

    public ArrayContext array() {
      return getRuleContext(ArrayContext.class, 0);
    }

    public ListContext list() {
      return getRuleContext(ListContext.class, 0);
    }

    public ConstructorContext constructor() {
      return getRuleContext(ConstructorContext.class, 0);
    }

    public ValueContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_value;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).enterValue(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener) ((ParadoxFileListener) listener).exitValue(this);
    }
  }

  public final ValueContext value() throws RecognitionException {
    ValueContext _localctx = new ValueContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_value);
    try {
      setState(70);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
        case 1:
          enterOuterAlt(_localctx, 1);
          {
            setState(58);
            integer();
          }
          break;
        case 2:
          enterOuterAlt(_localctx, 2);
          {
            setState(59);
            percent();
          }
          break;
        case 3:
          enterOuterAlt(_localctx, 3);
          {
            setState(60);
            real();
          }
          break;
        case 4:
          enterOuterAlt(_localctx, 4);
          {
            setState(61);
            date();
          }
          break;
        case 5:
          enterOuterAlt(_localctx, 5);
          {
            setState(62);
            string();
          }
          break;
        case 6:
          enterOuterAlt(_localctx, 6);
          {
            setState(63);
            symbol();
          }
          break;
        case 7:
          enterOuterAlt(_localctx, 7);
          {
            setState(64);
            variable();
          }
          break;
        case 8:
          enterOuterAlt(_localctx, 8);
          {
            setState(65);
            variable_expression();
          }
          break;
        case 9:
          enterOuterAlt(_localctx, 9);
          {
            setState(66);
            map();
          }
          break;
        case 10:
          enterOuterAlt(_localctx, 10);
          {
            setState(67);
            array();
          }
          break;
        case 11:
          enterOuterAlt(_localctx, 11);
          {
            setState(68);
            list();
          }
          break;
        case 12:
          enterOuterAlt(_localctx, 12);
          {
            setState(69);
            constructor();
          }
          break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class SymbolContext extends ParserRuleContext {
    public StringContext string() {
      return getRuleContext(StringContext.class, 0);
    }

    public TerminalNode INT() {
      return getToken(ParadoxFileParser.INT, 0);
    }

    public TerminalNode REAL() {
      return getToken(ParadoxFileParser.REAL, 0);
    }

    public TerminalNode SYMBOL() {
      return getToken(ParadoxFileParser.SYMBOL, 0);
    }

    public SymbolContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_symbol;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).enterSymbol(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).exitSymbol(this);
    }
  }

  public final SymbolContext symbol() throws RecognitionException {
    SymbolContext _localctx = new SymbolContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_symbol);
    try {
      setState(76);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case SSTRING:
        case DSTRING:
        case CSTRING:
          enterOuterAlt(_localctx, 1);
          {
            setState(72);
            string();
          }
          break;
        case INT:
          enterOuterAlt(_localctx, 2);
          {
            setState(73);
            match(INT);
          }
          break;
        case REAL:
          enterOuterAlt(_localctx, 3);
          {
            setState(74);
            match(REAL);
          }
          break;
        case SYMBOL:
          enterOuterAlt(_localctx, 4);
          {
            setState(75);
            match(SYMBOL);
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class StringContext extends ParserRuleContext {
    public TerminalNode DSTRING() {
      return getToken(ParadoxFileParser.DSTRING, 0);
    }

    public TerminalNode SSTRING() {
      return getToken(ParadoxFileParser.SSTRING, 0);
    }

    public TerminalNode CSTRING() {
      return getToken(ParadoxFileParser.CSTRING, 0);
    }

    public StringContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_string;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).enterString(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).exitString(this);
    }
  }

  public final StringContext string() throws RecognitionException {
    StringContext _localctx = new StringContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_string);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(78);
        _la = _input.LA(1);
        if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 229376L) != 0))) {
          _errHandler.recoverInline(this);
        } else {
          if (_input.LA(1) == Token.EOF) matchedEOF = true;
          _errHandler.reportMatch(this);
          consume();
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class IntegerContext extends ParserRuleContext {
    public TerminalNode INT() {
      return getToken(ParadoxFileParser.INT, 0);
    }

    public IntegerContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_integer;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).enterInteger(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).exitInteger(this);
    }
  }

  public final IntegerContext integer() throws RecognitionException {
    IntegerContext _localctx = new IntegerContext(_ctx, getState());
    enterRule(_localctx, 14, RULE_integer);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(80);
        match(INT);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class RealContext extends ParserRuleContext {
    public TerminalNode REAL() {
      return getToken(ParadoxFileParser.REAL, 0);
    }

    public RealContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_real;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener) ((ParadoxFileListener) listener).enterReal(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener) ((ParadoxFileListener) listener).exitReal(this);
    }
  }

  public final RealContext real() throws RecognitionException {
    RealContext _localctx = new RealContext(_ctx, getState());
    enterRule(_localctx, 16, RULE_real);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(82);
        match(REAL);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class DateContext extends ParserRuleContext {
    public TerminalNode DATE() {
      return getToken(ParadoxFileParser.DATE, 0);
    }

    public DateContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_date;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener) ((ParadoxFileListener) listener).enterDate(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener) ((ParadoxFileListener) listener).exitDate(this);
    }
  }

  public final DateContext date() throws RecognitionException {
    DateContext _localctx = new DateContext(_ctx, getState());
    enterRule(_localctx, 18, RULE_date);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(84);
        match(DATE);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class PercentContext extends ParserRuleContext {
    public TerminalNode PCT() {
      return getToken(ParadoxFileParser.PCT, 0);
    }

    public PercentContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_percent;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).enterPercent(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).exitPercent(this);
    }
  }

  public final PercentContext percent() throws RecognitionException {
    PercentContext _localctx = new PercentContext(_ctx, getState());
    enterRule(_localctx, 20, RULE_percent);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(86);
        match(PCT);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class MapContext extends ParserRuleContext {
    public TerminalNode BLOCK_START() {
      return getToken(ParadoxFileParser.BLOCK_START, 0);
    }

    public TerminalNode BLOCK_END() {
      return getToken(ParadoxFileParser.BLOCK_END, 0);
    }

    public List<AssignmentContext> assignment() {
      return getRuleContexts(AssignmentContext.class);
    }

    public AssignmentContext assignment(int i) {
      return getRuleContext(AssignmentContext.class, i);
    }

    public MapContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_map;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener) ((ParadoxFileListener) listener).enterMap(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener) ((ParadoxFileListener) listener).exitMap(this);
    }
  }

  public final MapContext map() throws RecognitionException {
    MapContext _localctx = new MapContext(_ctx, getState());
    enterRule(_localctx, 22, RULE_map);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(88);
        match(BLOCK_START);
        setState(92);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 502800L) != 0)) {
          {
            {
              setState(89);
              assignment();
            }
          }
          setState(94);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(95);
        match(BLOCK_END);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class ArrayContext extends ParserRuleContext {
    public TerminalNode BLOCK_START() {
      return getToken(ParadoxFileParser.BLOCK_START, 0);
    }

    public List<ValueContext> value() {
      return getRuleContexts(ValueContext.class);
    }

    public ValueContext value(int i) {
      return getRuleContext(ValueContext.class, i);
    }

    public TerminalNode BLOCK_END() {
      return getToken(ParadoxFileParser.BLOCK_END, 0);
    }

    public List<TerminalNode> COMMA() {
      return getTokens(ParadoxFileParser.COMMA);
    }

    public TerminalNode COMMA(int i) {
      return getToken(ParadoxFileParser.COMMA, i);
    }

    public List<AssignmentContext> assignment() {
      return getRuleContexts(AssignmentContext.class);
    }

    public AssignmentContext assignment(int i) {
      return getRuleContext(AssignmentContext.class, i);
    }

    public ArrayContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_array;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).enterArray(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener) ((ParadoxFileListener) listener).exitArray(this);
    }
  }

  public final ArrayContext array() throws RecognitionException {
    ArrayContext _localctx = new ArrayContext(_ctx, getState());
    enterRule(_localctx, 24, RULE_array);
    int _la;
    try {
      int _alt;
      setState(143);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 16, _ctx)) {
        case 1:
          enterOuterAlt(_localctx, 1);
          {
            setState(97);
            match(BLOCK_START);
            setState(98);
            value();
            setState(100);
            _errHandler.sync(this);
            _la = _input.LA(1);
            if (_la == COMMA) {
              {
                setState(99);
                match(COMMA);
              }
            }

            setState(111);
            _errHandler.sync(this);
            _la = _input.LA(1);
            while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 523284L) != 0)) {
              {
                {
                  setState(104);
                  _errHandler.sync(this);
                  switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                    case 1:
                      {
                        setState(102);
                        value();
                      }
                      break;
                    case 2:
                      {
                        setState(103);
                        assignment();
                      }
                      break;
                  }
                  setState(107);
                  _errHandler.sync(this);
                  _la = _input.LA(1);
                  if (_la == COMMA) {
                    {
                      setState(106);
                      match(COMMA);
                    }
                  }
                }
              }
              setState(113);
              _errHandler.sync(this);
              _la = _input.LA(1);
            }
            setState(114);
            match(BLOCK_END);
          }
          break;
        case 2:
          enterOuterAlt(_localctx, 2);
          {
            setState(116);
            match(BLOCK_START);
            setState(121);
            _errHandler.sync(this);
            _alt = 1;
            do {
              switch (_alt) {
                case 1:
                  {
                    {
                      setState(117);
                      assignment();
                      setState(119);
                      _errHandler.sync(this);
                      _la = _input.LA(1);
                      if (_la == COMMA) {
                        {
                          setState(118);
                          match(COMMA);
                        }
                      }
                    }
                  }
                  break;
                default:
                  throw new NoViableAltException(this);
              }
              setState(123);
              _errHandler.sync(this);
              _alt = getInterpreter().adaptivePredict(_input, 11, _ctx);
            } while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
            setState(125);
            value();
            setState(127);
            _errHandler.sync(this);
            _la = _input.LA(1);
            if (_la == COMMA) {
              {
                setState(126);
                match(COMMA);
              }
            }

            setState(138);
            _errHandler.sync(this);
            _la = _input.LA(1);
            while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 523284L) != 0)) {
              {
                {
                  setState(131);
                  _errHandler.sync(this);
                  switch (getInterpreter().adaptivePredict(_input, 13, _ctx)) {
                    case 1:
                      {
                        setState(129);
                        value();
                      }
                      break;
                    case 2:
                      {
                        setState(130);
                        assignment();
                      }
                      break;
                  }
                  setState(134);
                  _errHandler.sync(this);
                  _la = _input.LA(1);
                  if (_la == COMMA) {
                    {
                      setState(133);
                      match(COMMA);
                    }
                  }
                }
              }
              setState(140);
              _errHandler.sync(this);
              _la = _input.LA(1);
            }
            setState(141);
            match(BLOCK_END);
          }
          break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class VariableContext extends ParserRuleContext {
    public TerminalNode VARIABLE_START() {
      return getToken(ParadoxFileParser.VARIABLE_START, 0);
    }

    public TerminalNode SYMBOL() {
      return getToken(ParadoxFileParser.SYMBOL, 0);
    }

    public TerminalNode INT() {
      return getToken(ParadoxFileParser.INT, 0);
    }

    public VariableContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_variable;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).enterVariable(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof ParadoxFileListener)
        ((ParadoxFileListener) listener).exitVariable(this);
    }
  }
